<resources>
    <string name="app_name">CMPT370_GeocacheApp</string>
    <string name="title_activity_maps">Geocache</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>

<!--    Cache creation strings-->
    <string name="setCacheName">Enter Cache Name</string>
    <string name="cache_name">Cache Name</string>
    <string name="setLatitude">Enter Latitude</string>
    <string name="setLongitude">Enter Longitude</string>
    <string name="size">Select Cache Size</string>
    <string name="microRadio">Micro</string>
    <string name="smallRadio">Small</string>
    <string name="regularRadio">Regular</string>
    <string name="largeRadio">Large</string>
    <string name="otherRadio">Other</string>
    <string name="cacheDifficulty">Select Cache Difficulty</string>
    <string name="terrainDifficulty">Select Terrain Difficulty</string>
    <string name="createCache">Create New Cache</string>
    <string name="location_permission_denied">Location Permission Denied</string>
    <string name="permission_required_toast">Location Permission Required</string>
    <string name="permission_rationale_location">Location Required To Use Current Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="mediumRadio">Medium</string>
    <string name="description">Description</string>
    <string name="cache_distance">Distance</string>

    <!--    Range Slider initial values -->
    <string-array name="rangeSliderValues">
        <item>1</item>
        <item>5</item>
    </string-array>

    // Info window
    <string name="info_Title">Cache Name</string>
    <string name="info_description">Description</string>
    <string name="cache_rating_detail">Cache Rating: </string>
    <string name="Leave_rating_detail">Leave a Comment and Rating: </string>
    <string name="comments_ratings_detail">Cache Comments and Ratings</string>
    <string name="size_detail">Micro - test</string>
    <string name="cache_size_detail">Cache Size: </string>
    <string name="terrain_rating_detail">2 / 5 - test</string>
    <string name="terrain_name_detail">Terrain Difficulty: </string>
    <string name="difficulty_rating_detail">1 / 5 - test</string>
    <string name="difficulty_name_detail">Cache Difficulty: </string>
    <string name="distance_name_detail">Distance: </string>
    <string name="distance_value_detail">1250m - test</string>
    <string name="rating_value_detail">1.1 / 5 - test</string>
    <string name="rating_name_detail">Rating score: </string>
    <string name="author_value_detail">TestAuthor</string>
    <string name="created_by_detail">Created By: </string>
    <string name="cache_name_detail">Test Cache Name</string>
    <string name="delete_cache_detail">Delete Cache</string>
    <string name="one_star_detail">1/5</string>
    <string name="two_star_detail">2/5</string>
    <string name="three_star_detail">3/5</string>
    <string name="four_star_detail">4/5</string>
    <string name="five_star_detail">5/5</string>
    <string name="comment_button_detail">Comment and Rate</string>

    <string-array
        name="list_fragment_items">
        <item>Cache ID: Low to High</item>
        <item>Cache ID: High to Low</item>
        <item>Difficulty: Easy to Hard</item>
        <item>Difficulty: Hard to Easy</item>
        <item>Size: Small to Large</item>
        <item>Size: Large to Small</item>
        <item>Popularity: Low to High</item>
        <item>Popularity: High to Low</item>
    </string-array>


</resources>