<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@mipmap/list_displayrec"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_item"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginLeft="15dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:src="@mipmap/image1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:text="@string/cache_name"
            android:textSize="20sp"
            android:textColor="@color/Darkblue"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/item_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/cache_distance"
            android:textSize="18sp"
            android:textColor="@color/Darkblue"/>

        <TextView
            android:id="@+id/item_diff_terrain_id_summary"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/description"
            android:textSize="15sp"
            android:textColor="@color/Gray"/>

    </LinearLayout>

</LinearLayout>