<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".CacheCreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@mipmap/topbar_creation">

        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Step Three"
            android:textSize="30dp"
            android:textColor="@color/Darkblue"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">
        </TextView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/cacheCreateNestedScrollID"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="match_parent">



            <LinearLayout
                android:id="@+id/cacheCreateLinearID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cacheNameTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Darkblue"
                    android:text="@string/cache_name"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cacheName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cacheNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_round"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/cacheLatTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textColor="@color/Darkblue"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cacheLat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/latitudeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned|numberDecimal"
                        android:background="@drawable/bg_white_round"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/cacheLongTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textColor="@color/Darkblue"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cacheLong"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="6dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/longitudeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none|numberSigned|numberDecimal"
                        android:background="@drawable/bg_white_round"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/cacheSizeTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textColor="@color/Darkblue"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/cacheSizeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/cacheRadioSizeSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:paddingHorizontal="6dp"
                        android:textColor="@color/Darkblue"
                        android:text="@string/smallRadio" />

                    <RadioButton
                        android:id="@+id/cacheRadioSizeMed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="6dp"
                        android:textColor="@color/Darkblue"
                        android:text="@string/mediumRadio" />

                    <RadioButton
                        android:id="@+id/cacheRadioSizeLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="6dp"
                        android:textColor="@color/Darkblue"
                        android:text="@string/largeRadio" />
                </RadioGroup>

                <TextView
                    android:id="@+id/cacheDifficultyTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty"
                    android:textColor="@color/Darkblue"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/cacheDifficultySeekBar"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:max="5"
                    android:progress="1"
                    android:scaleX="2"
                    android:scaleY="2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/left_button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:onClick="createCache"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/left_button" />

                    <ImageButton
                        android:id="@+id/right_button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:onClick="createCache"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/right_button" />
                </LinearLayout>


                <!--            TODO: Button to get current location, so you dont have to type in the long/lat-->

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</FrameLayout>